# scoop-bucket

./: README.md
.github/workflows/: build-ka-binary-that-creates-json-for-scoop.yml  build-mcf-binary-that-creates-json-for-scoop.yml  build-mcf-binary-that-creates-json.yml  create-ka-json.yml  create-mcf-json.yml
bucket/: ka.json  mcf.json
scripts/: Cargo.toml  README.md
scripts/templates/: mcf.json
templates/: ka.json  mcf.json
